--- a/Serendipity/User Interface/Chat/MessageCell.xib
+++ b/Serendipity/User Interface/Chat/MessageCell.xib
@@ -7,17 +7,17 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="Py2-yb-Bjy" customClass="MessageCell" customModule="Serendipity" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+            <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Ka-4L-4oY">
-                        <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Ka-4L-4oY">
+                        <rect key="frame" x="0.0" y="0.0" width="80" height="80"/>
                     </imageView>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_play" translatesAutoresizingMaskIntoConstraints="NO" id="mRW-Az-PNq">
-                        <rect key="frame" x="30" y="30" width="30" height="30"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_play" translatesAutoresizingMaskIntoConstraints="NO" id="mRW-Az-PNq">
+                        <rect key="frame" x="25" y="25" width="30" height="30"/>
                     </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
@@ -31,10 +31,11 @@
                 <constraint firstItem="3Ka-4L-4oY" firstAttribute="centerY" secondItem="mRW-Az-PNq" secondAttribute="centerY" id="hJ9-74-Ujm"/>
                 <constraint firstItem="3Ka-4L-4oY" firstAttribute="top" secondItem="Py2-yb-Bjy" secondAttribute="top" id="zgw-31-Kjj"/>
             </constraints>
+            <size key="customSize" width="266" height="356"/>
             <connections>
                 <outlet property="imageView" destination="3Ka-4L-4oY" id="h0p-Sl-7lN"/>
             </connections>
-            <point key="canvasLocation" x="307" y="319"/>
+            <point key="canvasLocation" x="395" y="452"/>
         </collectionViewCell>
     </objects>
     <resources>
