Get rid of interface builder warning

--- a/Serendipity/User Interface/Chat/MessageCell.xib
+++ b/Serendipity/User Interface/Chat/MessageCell.xib
@@ -18,6 +18,10 @@
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_play" translatesAutoresizingMaskIntoConstraints="NO" id="mRW-Az-PNq">
                         <rect key="frame" x="25" y="25" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="LKt-Tk-Xqf"/>
+                            <constraint firstAttribute="height" constant="30" id="wty-Wf-Wtn"/>
+                        </constraints>
                     </imageView>
                 </subviews>
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
