--- a/Serendipity/User Interface/Settings/SettingsView.xib
+++ b/Serendipity/User Interface/Settings/SettingsView.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6750" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6735"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
@@ -92,9 +92,21 @@
                                 <action selector="sendFeedback:" destination="-1" eventType="touchUpInside" id="z8f-ou-coU"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S6W-TH-lvY">
+                            <rect key="frame" x="112" y="214" width="96" height="36"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="20"/>
+                            <state key="normal" title="Play Game">
+                                <color key="titleColor" red="0.21960784310000001" green="0.75294117650000003" blue="0.90588235289999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                            <connections>
+                                <action selector="playGame:" destination="-1" eventType="touchUpInside" id="Vkd-Y8-Fij"/>
+                            </connections>
+                        </button>
                     </subviews>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
+                        <constraint firstItem="S6W-TH-lvY" firstAttribute="top" secondItem="Sif-w2-Kce" secondAttribute="bottom" constant="35" id="0Uj-cN-UKR"/>
                         <constraint firstItem="Sif-w2-Kce" firstAttribute="centerX" secondItem="mao-Jc-hqD" secondAttribute="centerX" constant="0.5" id="2Sx-BU-uOc"/>
                         <constraint firstAttribute="bottom" secondItem="YW7-wb-mH4" secondAttribute="bottom" id="59k-UN-Cf5"/>
                         <constraint firstAttribute="centerY" secondItem="mao-Jc-hqD" secondAttribute="centerY" priority="750" constant="60.5" id="CES-XJ-40d"/>
@@ -102,6 +114,7 @@
                         <constraint firstAttribute="trailing" secondItem="OLW-ee-in0" secondAttribute="trailing" constant="8" id="WZx-bV-LFZ"/>
                         <constraint firstItem="mao-Jc-hqD" firstAttribute="top" relation="greaterThanOrEqual" secondItem="lXU-gX-flt" secondAttribute="top" constant="50" id="cSD-Bp-wuR"/>
                         <constraint firstItem="YW7-wb-mH4" firstAttribute="leading" secondItem="lXU-gX-flt" secondAttribute="leading" id="fgI-ez-ndO"/>
+                        <constraint firstItem="S6W-TH-lvY" firstAttribute="centerX" secondItem="Sif-w2-Kce" secondAttribute="centerX" constant="-0.5" id="gq9-zZ-P9V"/>
                         <constraint firstAttribute="centerX" secondItem="mao-Jc-hqD" secondAttribute="centerX" id="qCP-pn-iTW"/>
                         <constraint firstAttribute="bottom" secondItem="OLW-ee-in0" secondAttribute="bottom" constant="8" id="yOk-lJ-yPJ"/>
                     </constraints>
