--- a/Serendipity/User Interface/Signup/SignupView.xib
+++ b/Serendipity/User Interface/Signup/SignupView.xib
@@ -1,34 +1,51 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C94b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6254" systemVersion="14C109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6247"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="SignupViewController">
             <connections>
-                <outlet property="fbLoginView" destination="zYS-rD-Ue8" id="hm3-Q1-11v"/>
                 <outlet property="view" destination="iN0-l3-epB" id="H8h-Mq-QdD"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Serendipity" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XsT-Bs-ZWc">
-                    <rect key="frame" x="113" y="241" width="148" height="36"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="zYS-rD-Ue8" customClass="FBLoginView">
-                    <rect key="frame" x="37" y="530" width="300" height="60"/>
-                    <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
-                </view>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="TEMP-Get-Started" translatesAutoresizingMaskIntoConstraints="NO" id="EWx-rs-MkE">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                </imageView>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SdM-8k-H6p">
+                    <rect key="frame" x="35" y="367" width="250" height="119"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="119" id="eLA-Pd-L4X"/>
+                        <constraint firstAttribute="width" constant="250" id="xa8-P5-O5S"/>
+                    </constraints>
+                    <state key="normal">
+                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                    </state>
+                    <connections>
+                        <action selector="login:" destination="-1" eventType="touchUpInside" id="eH7-zq-3UR"/>
+                    </connections>
+                </button>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
-            <point key="canvasLocation" x="301.5" y="404.5"/>
+            <constraints>
+                <constraint firstItem="EWx-rs-MkE" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="5eA-w5-0cH"/>
+                <constraint firstItem="EWx-rs-MkE" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="9kA-0u-z9w"/>
+                <constraint firstAttribute="bottom" secondItem="SdM-8k-H6p" secondAttribute="bottom" constant="82" id="Fnb-uH-k4c"/>
+                <constraint firstAttribute="trailing" secondItem="EWx-rs-MkE" secondAttribute="trailing" id="V54-68-OH6"/>
+                <constraint firstAttribute="bottom" secondItem="EWx-rs-MkE" secondAttribute="bottom" id="arZ-q7-YYq"/>
+                <constraint firstAttribute="centerX" secondItem="SdM-8k-H6p" secondAttribute="centerX" id="gsc-u6-wIi"/>
+            </constraints>
+            <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
+            <point key="canvasLocation" x="261" y="410"/>
         </view>
     </objects>
+    <resources>
+        <image name="TEMP-Get-Started" width="640" height="1136"/>
+    </resources>
 </document>
